<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_logout_button"
        android:onClick="onLogoutButtonClicked"
        android:title="@string/logout_button" />
    <item
        android:id="@+id/switchTo_user_settings_button"
        android:onClick="userSettingButtonClicked"
        android:title="@string/user_settings_button" />
    <item
        android:id="@+id/switchTo_login_button"
        android:onClick="onLoginButtonClicked"
        android:orderInCategory="100"
        android:title="@string/login_button"
        app:showAsAction="never" />
</menu>