...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.DeleteUserActivity">

    <Button
        android:id="@+id/remove_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:enabled="false"
        android:onClick="RemoveButtonOnClick"
        android:text="Remove Employee"
        app:layout_constraintBottom_toTopOf="@+id/delete_warning_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_user_id_text"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/delete_warning_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
