...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortingLayout">

        <TableLayout
            android:id="@+id/bookListTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/side_nav_bar"
            android:showDividers="middle|beginning|end"
            android:stretchColumns="1" />
    </ScrollView>
...
