...
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/detail_reserve_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="100dp"
        android:onClick="reserveOnClick"
...
